Refactor report generation to use `PGN` information instead of `Controller` for engine identification; update related logic in `SummaryReport`, `SessionReport`, and `SearchesReport`.